added a class method for the Recipe model to return a list of all cuisine types

--- a/templates/home_anon.html
+++ b/templates/home_anon.html
@@ -1,9 +1,10 @@
 {% extends 'base.html' %}
 
+
 {% block page_title %}
 Cook It Up. Find Your Inner Chef
 {% endblock %}
 
 {% block content %}
-<h1>Find a dish.</h1>
+<h1>Your Place to Cook Anything.</h1>
 {% endblock %}
