added a cuisine route to show foods of a certain type of cuisine and also added a cuisine html template

--- a/templates/home.html
+++ b/templates/home.html
@@ -12,7 +12,7 @@ Cook It Up. Find Your Inner Chef
 </form>
 <div class="cuisine-container">
     {% for cuisine in cuisines %}
-    <p><a href="#">{{ cuisine }}</a></p>
+        <p><a href="/recipes/{{ cuisine }}">{{ cuisine }}</a></p>
     {% endfor %}
 </div>
 {% endblock %}
