--- a/templates/recipe-list.html
+++ b/templates/recipe-list.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 
 {% block page_title %}
-{{ cuisine }} Foods
+Find A Dish!
 {% endblock %}
 
 {% block content %}
-<!-- insert foods of type 'cuisine' here -->
+<h1>{{ recipe_query }}</h1>
 {% endblock %}
