--- a/templates/cuisine-page.html
+++ b/templates/cuisine-page.html
@@ -5,5 +5,9 @@
 {% endblock %}
 
 {% block content %}
-<!-- insert foods of type 'cuisine' here -->
+    {% for (id, title) in recipes %}
+    <div>
+        id: {{ id }}, title: {{ title }}
+    </div>
+    {% endfor %}
 {% endblock %}
