--- a/templates/home.html
+++ b/templates/home.html
@@ -12,7 +12,7 @@ Cook It Up. Find Your Inner Chef
 </form>
 <div class="cuisine-container">
     {% for cuisine in cuisines %}
-        <p><a href="{{ url_for('show_recipes_by_cuisine', cuisine=cuisine) }}">{{ cuisine }}</a></p>
+        <p><a href="{{ url_for('show_recipes_by_cuisine', cuisine_type=cuisine) }}">{{ cuisine }}</a></p>
     {% endfor %}
 </div>
 {% endblock %}
