recipes are now displayed by cuisine with their api-id attached to them

--- a/templates/recipes_by_cuisine.html
+++ b/templates/recipes_by_cuisine.html
@@ -6,6 +6,6 @@
 
 {% block content %}
     {% for id, recipe in recipes %}
-    <p>{{ recipe }}</p>
+    <p data-api-id="{{ id }}">{{ recipe }}</p>
     {% endfor %}
 {% endblock %}
