added a class method to search for recipes by a query, added a route to display these recipes, and added a helper function to make a request by a query

--- a/templates/home.html
+++ b/templates/home.html
@@ -5,9 +5,9 @@ Cook It Up. Find Your Inner Chef
 {% endblock %}
 
 {% block content %}
-<form action="/recipes">
-    <label for="recipe-search">Find a dish: </label>
-    <input id ="recipe-search" type="text" placeholder="Recipe Name" name="recipe">
+<form action="{{ url_for('list_recipes_by_query') }}">
+    <label for="recipe-search">Find a recipe: </label>
+    <input id ="recipe-search" type="text" placeholder="Recipe Name" name="query">
     <button>Search</button>
 </form>
 <div class="cuisine-container">
