put recipes inside of <ul>'s

--- a/templates/single_recipe.html
+++ b/templates/single_recipe.html
@@ -7,10 +7,16 @@
 {% block content %}
 <img src="{{ recipe[1] }}" alt="">
 <h1>{{ recipe[0] }}</h1>
+
 <h2>Ingredients:</h2>
+<ul>
 {% for ingred in recipe[2] %}
-    <p>{{ ingred }}</p>
+    <li>
+        {{ ingred }}
+    </li>
 {% endfor %}
+</ul>
+
 <h2>Equipment:</h2>
 <h2>Instructions:</h2>
 {% endblock %}
