--- a/templates/recipes_by_cuisine.html
+++ b/templates/recipes_by_cuisine.html
@@ -5,7 +5,11 @@
 {% endblock %}
 
 {% block content %}
+<ul>
     {% for id, recipe in recipes %}
-    <p><a href="{{ url_for('show_recipe_by_id', id=id) }}">{{ recipe }}</a></p>
+    <li>
+    <a href="{{ url_for('show_recipe_by_id', id=id) }}">{{ recipe }}</a>
+    </li>
     {% endfor %}
+</ul>
 {% endblock %}
