--- a/templates/recipes_by_query.html
+++ b/templates/recipes_by_query.html
@@ -5,7 +5,11 @@ Find a Dish!
 {% endblock %}
 
 {% block content %}
+<ul>
     {% for id, recipe in recipes %}
-    <p><a href="{{ url_for('show_recipe_by_id', id=id) }}">{{ recipe }}</a></p>
+    <li>
+    <a href="{{ url_for('show_recipe_by_id', id=id) }}">{{ recipe }}</a>
     {% endfor %}
+    </li>
+</ul>
 {% endblock %}
