instructions are now displayed for each recipe

--- a/templates/single_recipe.html
+++ b/templates/single_recipe.html
@@ -27,4 +27,11 @@
 </ul>
 
 <h2>Instructions:</h2>
+<ul>
+    {% for num, step in recipe_inst %}
+    <li>
+        {{ num }} {{ step }}
+    </li>
+    {% endfor %}
+</ul>
 {% endblock %}
