modified added a signup route and template

--- a/templates/home_anon.html
+++ b/templates/home_anon.html
@@ -6,5 +6,8 @@ Cook It Up. Find Your Inner Chef
 {% endblock %}
 
 {% block content %}
-<h1>Your Place to Cook Anything.</h1>
+<h1>ANONYMOUS HOMEPAGE</h1>
+<button><a href="/signup">Sign Up</a></button></br>
+<button><a>Log In</a></button></br>
+<i class="fas fa-lemon" style="color: green;"></i>
 {% endblock %}
