--- a/templates/home.html
+++ b/templates/home.html
@@ -5,6 +5,7 @@ Cook It Up. Find Your Inner Chef
 {% endblock %}
 
 {% block content %}
+<h1>LOGGED-IN HOMEPAGE</h1>
 <form action="{{ url_for('list_recipes_by_query') }}">
     <label for="recipe-search">Find a recipe: </label>
     <input id ="recipe-search" type="text" placeholder="Recipe Name" name="query">
