--- a/templates/home_anon.html
+++ b/templates/home_anon.html
@@ -8,6 +8,6 @@ Cook It Up. Find Your Inner Chef
 {% block content %}
 <h1>ANONYMOUS HOMEPAGE</h1>
 <button><a href="/signup">Sign Up</a></button></br>
-<button><a>Log In</a></button></br>
+<button><a href="/login">Log In</a></button></br>
 <i class="fas fa-lemon" style="color: green;"></i>
 {% endblock %}
