--- a/templates/login.html
+++ b/templates/login.html
@@ -11,6 +11,10 @@ Login
     {% for field in form if field.widget.input_type != 'hidden' %}
         {{ field.label }}
         {{ field }}
+
+        {% for error in field.errors %}
+            {{ error }}
+        {% endfor %}
     {% endfor %}
     <button>Submit</button>
 </form>
