added a class method to get multiple recipes at once, added a route for a user to favorite their recipes, and users can now see their favorite recipes on their page

--- a/templates/single_recipe.html
+++ b/templates/single_recipe.html
@@ -6,6 +6,9 @@
 
 {% block content %}
 <img src="{{ recipe_info[1] }}" alt="">
+<form action="/recipes/{{ id }}/favorite" method="POST">
+    <button>Favorite</button>
+</form>
 <h1>{{ recipe_info[0] }}</h1>
 
 <h2>Ingredients:</h2>
