implemented a route to unfavorite a recipe

--- a/templates/single_recipe.html
+++ b/templates/single_recipe.html
@@ -9,6 +9,9 @@
 <form action="/recipes/{{ id }}/favorite" method="POST">
     <button>Favorite</button>
 </form>
+<form action="/recipes/{{ id }}/unfavorite" method="POST">
+    <button>Un-favorite</button>
+</form>
 <h1>{{ recipe_info[0] }}</h1>
 
 <h2>Ingredients:</h2>
