--- a/templates/home.html
+++ b/templates/home.html
@@ -6,9 +6,13 @@ Cook It Up. Find Your Inner Chef
 
 {% block content %}
 <h1>LOGGED-IN HOMEPAGE</h1>
-<form action="{{ url_for('list_recipes_by_query') }}">
-    <label for="recipe-search">Find a recipe: </label>
-    <input id ="recipe-search" type="text" placeholder="Recipe Name" name="query">
+<form action="{{ url_for('list_recipes_by_query') }}" method="POST">
+    {{ form.hidden_tag() }}
+    
+    {% for field in form if field.widget.input_type != 'hidden' %}
+        {{ field.label }}
+        {{ field }}
+    {% endfor %}
     <button>Search</button>
 </form>
 <div class="cuisine-container">
