--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,11 @@
     integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 </head>
 <body>
+    {% with messages = get_flashed_messages() %}
+        {% for msg in messages %}
+            <p>{{ msg }}</p>
+        {% endfor %}
+    {% endwith %}
     
     {% block content %}
     {% endblock %}
