--- a/static/style.css
+++ b/static/style.css
@@ -1,4 +1,4 @@
-body { 
+.bg-image { 
     background: url("cook_it_up_logo.png") no-repeat center center fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
