--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
     integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="../static/style.css">
 </head>
-<body>
+<body {% if request.endpoint == 'show_homepage' and (not g.user) %} class="bg-image" {% endif %}>
     {% if g.user %}
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
