made macros and made it so the login page now shows a color

--- a/static/style.css
+++ b/static/style.css
@@ -9,3 +9,7 @@ body {
     -o-background-size: cover;
     background-size: cover;
   }
+
+  .login-page-color {
+    background: linear-gradient(90deg, rgba(24,198,195,1) 17%, rgba(124,209,203,1) 37%);
+  }
