--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,4 @@
+{% from 'macros.html' import body_background_color, body_background_logo %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,7 +11,7 @@
     integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="../static/style.css">
 </head>
-<body {% if (request.endpoint == 'show_homepage') and (not g.user) %} class="bg-image" {% endif %}>
+<body class="{{ body_background_logo(request) }} {{ body_background_color(request) }}">
     {% if g.user %}
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
