--- a/templates/signup.html
+++ b/templates/signup.html
@@ -23,7 +23,7 @@ Signup
             {% endfor %}
             <div class="row">
                 <div class="col d-flex justify-content-center">
-                    <button class="btn btn-success mx-3 px-5">Signup</button>
+                    <button class="btn btn-success mx-3 px-5">Sign Up</button>
                     <a href="/" class="btn btn-info mx-3 px-5">Go Back</a>
                 </div>
             </div>
