--- a/templates/recipes_by_cuisine.html
+++ b/templates/recipes_by_cuisine.html
@@ -5,12 +5,12 @@
 {% endblock %}
 
 {% block content %}
-<h1>{{ cuisine_type }} Foods</h1>
-<ul>
-    {% for id, recipe in recipes %}
-    <li>
-    <a href="{{ url_for('show_recipe_by_id', id=id) }}">{{ recipe }}</a>
-    </li>
-    {% endfor %}
-</ul>
+<h1 class="text-center">{{ cuisine_type }} Foods</h1>
+<div class="container">
+    <div class="list-group">
+        {% for id, recipe in recipes %}
+        <a href="{{ url_for('show_recipe_by_id', id=id) }}" class="list-group-item list-group-item-action">{{ recipe }}</a>
+        {% endfor %}
+    </div>
+</div>
 {% endblock %}
