page that lists foods of a certain query is now styled

--- a/templates/recipes_by_cuisine.html
+++ b/templates/recipes_by_cuisine.html
@@ -12,5 +12,6 @@
         <a href="{{ url_for('show_recipe_by_id', id=id) }}" class="list-group-item list-group-item-action">{{ recipe }}</a>
         {% endfor %}
     </div>
+    <a href="/" class="btn btn-outline-primary mt-3">Go back</a>
 </div>
 {% endblock %}
