--- a/templates/base.html
+++ b/templates/base.html
@@ -13,20 +13,24 @@
 </head>
 <body class="{{ body_background_logo(request) }} {{ body_background_color(request) }}">
     {% if g.user %}
-    <ul class="nav">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Active</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-        </li>
-    </ul>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light mb-2 shadow">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Cook It Up</a>
+          <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarSupportedContent">
+            <ul class="navbar-nav mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link" href="/">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/users/{{ g.user.id }}">User Page</a>
+              </li>
+            </ul>
+            <form action="/logout" method="POST">
+                <button class="btn btn-light">Logout</button>
+            </form>
+          </div>
+        </div>
+    </nav>
     {% endif %}
 
     {% with messages = get_flashed_messages(with_categories=True) %}
@@ -37,6 +41,13 @@
     
     {% block content %}
     {% endblock %}
+
+    {% if g.user %}
+    <footer class="d-flex justify-content-center align-items-center bg-light py-4 mt-4">
+        <i class="far fa-copyright"></i>
+        <span class="ms-2">2021 Cook It Up</span>
+    </footer>
+    {% endif %}
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" 
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous">
