calories are now displayed when you search for food by query

--- a/static/style.css
+++ b/static/style.css
@@ -17,3 +17,7 @@ background: linear-gradient(313deg, rgba(24,198,195,1) 34%, rgba(4,255,237,1) 90
 .search-button {
     width: 75%;
 }
+
+.fa-lemon {
+    color: lightgreen;
+}
