--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
     {% if g.user %}
     <nav class="navbar navbar-expand-lg navbar-light bg-light mb-2 shadow">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Cook It Up</a>
+          <span class="navbar-brand" href="#"><i class="far fa-lemon"></i> Cook It Up</span>
           <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarSupportedContent">
             <ul class="navbar-nav mb-2 mb-lg-0">
               <li class="nav-item">
