--- a/templates/recipes_by_query.html
+++ b/templates/recipes_by_query.html
@@ -8,8 +8,8 @@ Find a Dish!
 <div class="container mt-3">
     <h3 class="text-center">Search Term: {{ query }}</h3>
     <div class="list-group mt-3">
-        {% for id, recipe in recipes %}
-        <a href="{{ url_for('show_recipe_by_id', id=id) }}" class="list-group-item list-group-item-action">{{ recipe }}</a>
+        {% for id, recipe, cal in recipes %}
+        <a href="{{ url_for('show_recipe_by_id', id=id) }}" class="list-group-item list-group-item-action">{{ recipe }} ({{ cal }} calories)</a>
         {% endfor %}
     </div>
     <a href="/" class="btn btn-outline-primary mt-3">Go back</a>
